TEST_PROGRAMS/INVALID/03/invalid_switch5.go
package main
func f() {
	switch tag {
	default:
		s3()
	case 0, 1, 2, 3:
		s1();
	}
	switch i { 
		return -x // missing case or default
	default:
		return x
	}
	switch {
	
	}
}
